# terraform-aws-control_tower_account_factory

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GITLAB_SETUP_COMPLETE.md  GITLAB_USAGE.md  MDLZ_ADDITIONS.md  NOTICE  NOTICE.txt  README.md  VERSION  data.tf  data_custom.tf  locals.tf  locals_custom.tf  main.tf  main.tofu  outputs.tf  outputs.tofu  providers.tf  providers.tofu  sonar-project.properties  ssm_custom.tf  todo.md  variables.tf  variables.tofu  versions.tf  versions.tofu
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request_template.md
.github/workflows/: ci.yml  pr.yml  sync.yaml  terraform.yml
examples/azuredevops+tf_cloud/: main.tf
examples/bitbucket+tf_enterprise/: main.tf  main.tofu
examples/codecommit+tf_oss/: backend.tf  buildspec.yml  main.tf  main.tofu  network.tf  ou.tf  sso.tf
examples/github+tf_oss/: main.tf  main.tofu
examples/githubenterprise+tf_cloud/: main.tf  main.tofu
examples/gitlab+tf_oss/: main.tf
examples/gitlabselfmanaged+tf_cloud/: main.tf
modules/aft-account-provisioning-framework/: cloudwatch.tofu  data.tf  iam.tf  iam.tofu  lambda.tf  outputs.tf  outputs.tofu  readme.md  states.tf  variables.tf  variables.tofu  versions.tf
modules/aft-account-request-framework/: README.md  backup.tf  backup.tofu  data.tf  ddb.tf  ddb_custom.tf  eventbridge.tf  eventbridge.tofu  iam.tf  kms.tf  lambda.tf  lambda.tofu  locals.tf  outputs.tf  outputs.tofu  outputs_custom.tf  sns.tf  sqs.tf  sqs.tofu  variables.tf  variables.tofu  versions.tf  versions.tofu  vpc.tf
modules/aft-archives/: data.tf  outputs.tf  outputs.tofu
sources/aft-lambda-layer/: pyproject.toml  readme.md  requirements.txt  setup.py
sources/aft-lambda-layer/aft-common/: readme.md  setup.py
sources/aft-lambda-layer/aft-common/src/aft_common/: __init__.py  aft_utils.py  datetime_encoder.py  logger.py
sources/aft-lambda-layer/aft_common/: account.py  account_provisioning_framework.py  account_request_framework.py  account_request_record_handler.py  aft_types.py  aft_utils.py  auth.py  codepipeline.py  constants.py  customizations.py  datetime_encoder.py  ddb.py  exceptions.py  feature_options.py  logger.py  metrics.py  notifications.py  organizations.py  premium_support.py  report_metrics.py  s3.py  service_catalog.py  shared_account.py  sqs.py  ssm.py  types.py
sources/aft-lambda-layer/aft_common/schemas/: identify_targets_request_schema.json
(+306 files in other folders)
