# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    "setuptools",
    "wheel",
]


# url="https://github.com/aws-ia/terraform-aws-control_tower_account_factory"

[project]
name = "aft-common"
authors = [
    {name = "AWS"}
]
version = "0.2.0"
requires-python = ">=3.8"
description="Common framework for AWS Control Tower Account Factory for Terraform"
classifiers=[
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3 == 1.28.44",
    "botocore == 1.31.44",
    "requests == 2.31.0",
    "jsonschema == 4.3.2",
]


[project.optional-dependencies]
dev = [
    "pytest == 7.1.2",
    "pytest-subtests == 0.8.0",
    "black == 22.6.0",
    "isort == 5.10.1",
    "pre-commit == 2.19.0",
    "mypy == 0.961",
    "boto3-stubs[support, stepfunctions, ec2, organizations, servicecatalog, sqs, lambda, sns, sts, cloudtrail, ssm, iam, dynamodb] == 1.26.36",
    "aws_lambda_powertools == 1.25.9",
    "types-requests == 2.27.5",
]
