# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    "setuptools",
    "wheel",
]


# url="https://github.com/aws-ia/terraform-aws-control_tower_account_factory"

[project]
name = "aft-common"
authors = [
    {name = "AWS"}
]
version = "0.2.0"
requires-python = ">=3.12,<4.0.0"
description="Common framework for AWS Control Tower Account Factory for Terraform"
classifiers=[
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3 == 1.39.3",
    "botocore == 1.39.3",
    "requests == 2.32.4",
    "jsonschema == 4.3.2",
    "urllib3 >= 2.6.0"
]


[project.optional-dependencies]
dev = [
    "pytest ~= 8.4.1",
    "pytest-cov ~= 6.2.0",
    "pytest-subtests ~= 0.14.2",
    "black ~= 25.1.0",
    "isort ~= 6.0.1",
    "pre-commit ~= 4.2.0",
    "mypy ~= 1.16.1",
    "boto3-stubs[support,stepfunctions, ec2, organizations, servicecatalog, sqs, lambda, sns, sts, cloudtrail, ssm, iam, dynamodb, inspector2, s3] ~= 1.39.0",
    "aws_lambda_powertools ~= 3.16.0",
    "types-requests == 2.32.4.*",  # should match the installed requests version
]
